--- a/prj1-master_2 (1).zip_expanded/.project
+++ b/prj1-master_2 (1).zip_expanded/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>prj1-master_2.zip_expanded</name>
+	<name>prj1-master_2 (1).zip_expanded</name>
 	<comment></comment>
 	<projects>
 	</projects>
